--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testsetup2",
+  "name": "wdc-full-dev-environment",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "vue": "^3.3.0"
   }
 }
